tests/rosetta/transpiler/Clojure/abbreviations-simple.error
run error: exit status 1
WARNING: num already refers to: #'clojure.core/num in namespace: main, being replaced by: #'main/num
Syntax error compiling at (/workspace/mochi/tests/rosetta/transpiler/Clojure/abbreviations-simple.clj:26:347).
Unable to resolve symbol: c in this context

Full report at:
/tmp/clojure-5848478423120297925.edn
